v1.1.7 trying to prevent img overflow

--- a/UserVoice.RCL/Components/ReleaseNotesCompactList.razor.css
+++ b/UserVoice.RCL/Components/ReleaseNotesCompactList.razor.css
@@ -1,3 +1,7 @@
 ﻿a:link, a:visited {
     color:black;    
 }
+
+img {
+    max-width:100%
+}
